edit html -css, add js

--- a/index.html
+++ b/index.html
@@ -3,23 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV cá nhân của Vũ Đức Hoàng</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Giới thiệu bản thân</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Vũ Đức Hoàng (Design Frontend)</h1>
-    
-    <div class="thongtin">
-        <b>Tên:</b> <i>Vũ Đức Hoàng</i>
-    </div>
+    <header>
+        <div class="container">
+            <h1>Chào mừng đến với trang cá nhân của tôi</h1>
+            <p>Giới thiệu bản thân chuyên nghiệp, kỹ năng, và những dự án tôi đã thực hiện.</p>
+        </div>
+    </header>
 
-    <div class="thongtin">
-        <b>Ngày sinh:</b> <i>2003</i>
-    </div>
+    <section id="about" class="fade-in">
+        <div class="container">
+            <h2>Về tôi</h2>
+            <img src="hoang.jpg" alt="Ảnh đại diện của Vũ Đức Hoàng" width="200">
+            <p>Xin chào! Tôi là Vũ Đức Hoàng, một chuyên gia lập trình Website. Với niềm đam mê về lập trình Website, tôi luôn nỗ lực học hỏi và phát triển bản thân mỗi ngày.</p>
+        </div>
+    </section>
 
-    <div class="thongtin">
-        <b>Mã số sinh viên:</b> <i>2180600467</i>
-    </div>
+    <section id="skills" class="fade-in">
+        <div class="container">
+            <h2>Kỹ năng của tôi</h2>
+            <ul>
+                <li>HTML, CSS, JavaScript</li>
+                <li>Phát triển web front-end</li>
+                <li>Thấu hiểu về UX/UI</li>
+                <li>Quản lý dự án</li>
+            </ul>
+        </div>
+    </section>
 
+    <section id="projects" class="fade-in">
+        <div class="container">
+            <h2>Dự án đã thực hiện</h2>
+            <div class="projects">
+                <div class="project-item">
+                    <h3>Dự án 1</h3>
+                    <p>Mô tả về dự án 1.</p>
+                </div>
+                <div class="project-item">
+                    <h3>Dự án 2</h3>
+                    <p>Mô tả về dự án 2.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Vũ Đức Hoàng. Mọi quyền được bảo vệ.</p>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
